# algoritm_tryouts

./: LICENSE  README.md  chain_sum.py  class_names.py  currencies.py  factorial.py  fibonacci.py  find_in_json.py  find_vovels.py  flatify_dict.py  intersection.py  is_anagram.py  islands.py  longest_repeating_sequence.py  longest_str_sequence.py  maze.py  palindrome.py  parens_validator.py  pyproject.toml  quick_sort.py  romans.py  tree_in_width.py
tryouts/: callbacks.py  fibonacci.py  find_in_json.py  islands.py  longest_repeating_sequence.py  maze.py  palindrome.py  read_html_from_url.py  remove_dict_duplicates.py
tryouts/yandex/: 3_delete_duplicates.py  4_parens_generator.py
yandex/: 1_stones_and_jevels.py  2_consecutive_chars.py  5_anagrams.py  inner_join.py
