[tool.poetry]
name = "algoritm-tryouts"
version = "0.1.0"
description = ""
authors = ["zhukovny <cruvar.zhukov@yandex.ru>"]
readme = "README.md"
packages = [{include = "algoritm_tryouts"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
